<resources>

    <string name="app_name">Kormilica</string>
    <string name="please_wait">Please wait...</string>
    <string name="wrong_data">Error receiving data from server.</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="version">Version</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="minimal_summ">Minimal summ of order - </string>
    <string name="itogo">Itogo</string>
    <string name="in_order">In order</string>
    <string name="to_order">To order</string>
    <string name="add_to_order">Add to order</string>
    <string name="select_count">Plese select count:</string>
    <string name="_pcs">/pcs.</string>
    <string name="pcs">pcs.</string>
    <string name="your_order">Your order</string>
    <string name="delivery">Delivery</string>
    <string name="contact_to_us">Contact to us</string>
    <string name="call">Call</string>
    <string name="returned">Return back to shop</string>
    <string name="phone_number">+6 666 666 66 66</string>
    <string name="save">Save</string>
    <string name="phone">Phone:</string>
    <string name="city">City:</string>
    <string name="address">Address:</string>
    <string name="about">About us</string>
    <string name="address_details">Street, home, room</string>
    <string name="button_empty_phone">Please enter phone</string>
    <string name="button_empty_address">Please enter addres of delivery</string>
    <string name="button_empty_phone_address">Please enter phone number and addres of delivery</string>
    <string name="deliver_order">Deliver the order</string>
    <string name="updated_successfull">Database was updated successfully</string>
    <string name="empty_phone">Field phone is empty.</string>
    <string name="empty_city">Field city is empty</string>
    <string name="empty_address">Field address is empty</string>
        
    

    <string name="prepare_order">Prepare order</string>
    <string name="free_shipping">Free shipping on orders over</string>
    <string name="error_netw_connection">No network connection. Please check network settings or try later.</string>
			
	<string name="author">by Sergey Mashukov</string>
	<string name="differente_info">It is very fine application. To read more, please go to official web site. :)</string>
	<string name="crash_toast_text">Sorry. Application was crashed, but a report has been sent to developers to help fix the issue. </string>
	
    
</resources>
