<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
   	android:background="#ffffff">
 
    <LinearLayout android:layout_width="fill_parent"
		android:paddingTop="8dp"
		android:paddingBottom="8dp"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">

        <TextView android:layout_width="fill_parent"
        	android:layout_weight="1"
			android:text="@string/phone"
        	android:layout_height="wrap_content"
	       	android:layout_gravity="left|center"
		   	android:textColor="#000000"
        	android:textSize="18dp"/>
        
        <EditText android:id="@+id/phone"
			android:inputType="number"
        	android:layout_weight="0.5"
        	android:layout_width="fill_parent"
			android:hint="+7"
        	android:layout_height="wrap_content"
	       	android:layout_gravity="left|center"
		   	android:textColor="#000000"
        	android:textSize="18dp"/>
        
    </LinearLayout>
    
	<ImageView android:background="@drawable/separator"
		android:layout_gravity="center"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"/> 
    
    <LinearLayout android:layout_width="fill_parent"
		android:paddingTop="8dp"
		android:paddingBottom="8dp"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">

        <TextView android:layout_width="fill_parent"
        	android:layout_weight="1"
			android:text="@string/city"
        	android:layout_height="wrap_content"
	       	android:layout_gravity="left|center"
		   	android:textColor="#000000"
        	android:textSize="18dp"/>
        
        <EditText android:id="@+id/city"
        	android:layout_weight="0.5"
        	android:layout_width="fill_parent"
			android:text="Чебоксары"
        	android:layout_height="wrap_content"
	       	android:layout_gravity="left|center"
		   	android:textColor="#000000"
        	android:textSize="18dp"/>
        
    </LinearLayout>
	
	<ImageView android:background="@drawable/separator"
		android:layout_gravity="center"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"/> 
    
    <LinearLayout android:layout_width="fill_parent"
		android:paddingTop="8dp"
		android:paddingBottom="8dp"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">

        <TextView android:layout_width="fill_parent"
        	android:layout_weight="1"
			android:text="@string/address"
        	android:layout_height="wrap_content"
	       	android:layout_gravity="left|center"
		   	android:textColor="#000000"
        	android:textSize="18dp"/>
        
        <EditText android:id="@+id/address"
        	android:layout_weight="0.5"
        	android:layout_width="fill_parent"
			android:hint="@string/address_details"
        	android:layout_height="wrap_content"
	       	android:layout_gravity="left|center"
		   	android:textColor="#000000"
        	android:textSize="18dp"/>
        
    </LinearLayout>

	<ImageView android:background="@drawable/separator"
		android:layout_gravity="center"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"/> 
	
	<ImageView android:background="#ffffff"
		android:layout_gravity="center"
		android:layout_height="20dp" 
		android:layout_width="wrap_content"/> 
	
    <TextView android:background="@drawable/green_button_selector"
        android:id="@+id/button"
		android:textColor="#ffffff"
		android:textSize="22dp"
    	android:text="@string/deliver_order"
		android:layout_gravity="center_vertical|center_horizontal"
		android:gravity="center_vertical|center_horizontal"
		android:layout_width="280dp"
    	android:layout_height="50dp"/>
        
</LinearLayout>        